# bitrix24-api-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish.yml
examples/: README.md  async_example.py  custom_exception_handling.py  sync_example.py
src/bitrix24_client/: __init__.py  async_client.py  base_client.py  exceptions.py  sync_client.py  utils.py
src/bitrix24_client/interfaces/: __init__.py  response_validator.py  retry_strategy.py
src/bitrix24_client/response_formatters/: __init__.py  default.py  interfaces.py
src/bitrix24_client/retry_strategies/: __init__.py  exponential.py  exponential_jitter.py  fixed.py  linear.py  logarithmic.py
src/bitrix24_client/validators/: __init__.py  default_validator.py
