[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "bitrix24-api-client"
version = "0.1.0"
description = "Library for working with the Bitrix24 API (supports both synchronous and asynchronous clients)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Temirkhan", email="temirhansamurhanov@gmail.com"}]

dependencies = [
    "httpx>=0.28.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = ["mypy>=1.15.0"]

[project.urls]
Homepage = "https://github.com/stemirkhan/bitrix24-api-client"
Repository = "https://github.com/stemirkhan/bitrix24-api-client"
Issues = "https://github.com/stemirkhan/bitrix24-api-client/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
