[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitrix24-api-client"
version = "0.1.2"
description = "A modern Python client for Bitrix24 REST API. Supports both synchronous and asynchronous communication."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Temirkhan", email = "temirhansamurhanov@gmail.com"}]

keywords = [
    "bitrix24",
    "bitrix",
    "rest",
    "crm",
    "api",
    "python client",
    "httpx",
    "requests",
    "async",
    "webhook"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

dependencies = [
    "httpx>=0.28.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = ["mypy>=1.15.0"]

[project.urls]
Homepage = "https://github.com/stemirkhan/bitrix24-api-client"
Repository = "https://github.com/stemirkhan/bitrix24-api-client"
Issues = "https://github.com/stemirkhan/bitrix24-api-client/issues"
Documentation = "https://github.com/stemirkhan/bitrix24-api-client#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
warn_unused_configs = true
pretty = true
show_error_codes = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
